# auglift

./: 10_10_convert_pkl_to_npz_faster.py  2_25_split_fit3d_train_test.py  2_3_merge_xycd_npz_3dhp.py  2_3_merge_xycd_npz_3dhp_train.py  2_3_merge_xycd_npz_3dpw.py  2_3_merge_xycd_npz_fit3d.py  2_3_merge_xycd_npz_h36m.py  5_24_merge_xy_npz_h36m_hrnet_v2_detections_add_vis.py  README.md  openmmlab_env.yml  pyproject.toml  setup.py
coarse_depth_experiments/Depth-Anything-OfficialV2/Depth-Anything-V2/metric_depth/: 1_30_estimate_depth_proto_loop_metric_3dhp_v3_sampling_patch_statistics.py  1_30_estimate_depth_proto_loop_metric_3dhp_v4_cache_img_aug_baseline_oct_2025.py  1_30_estimate_depth_proto_loop_metric_3dpw_v3_sampling_patch_statistics.py  1_30_estimate_depth_proto_loop_metric_3dpw_v4_cache_img_aug_baseline_oct_2025.py  1_30_estimate_depth_proto_loop_metric_fit3d_v3_sampling_patch_statistics.py  1_30_estimate_depth_proto_loop_metric_h36m_v3_sampling_patch_statistics.py  1_30_estimate_depth_proto_loop_metric_h36m_v4_cache_img_aug_baseline_oct_2025.py  launch_depth_metric_loop_3dhp.sh  launch_depth_metric_loop_3dhp_train.sh  launch_depth_metric_loop_3dpw.sh  launch_depth_metric_loop_fit3d.sh  launch_depth_metric_loop_h36m.sh  launch_hrnet_detections_h36m.sh  (+5 more)
docs/: ANALYSIS.md  CHANGES.md  PREPROCESSING.md  TRAINING.md
mmpose/mmpose/codecs/: image_pose_lifting.py  poseformer_label.py
mmpose/tools/: launch_train_cross_datasets_may_25_pf.sh  launch_train_cross_datasets_may_25_poseformer_test_outer.sh
sep_2025_experiments/: poseformer_metrics_simple_with_autorotate.py
(+7 files in other folders)
