[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auglift"
version = "0.1.0"
description = "AugLift: Depth-Augmented 3D Human Pose Lifting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "AugLift Team"}
]

[project.urls]
Homepage = "https://github.com/nikolaiwarner7/auglift"
Repository = "https://github.com/nikolaiwarner7/auglift"

[tool.setuptools]
packages = {find = {include = ["mmpose*", "coarse_depth_experiments*", "auglift*", "configs*"]}}
